--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -54,12 +54,22 @@ h2 {
 }
 img {
 	margin: 40px 8px 0 8px;
+	background-color: 
 }
 h1, h2, a {
 	text-transform: uppercase;
 }
 p {
 	font-family: "RALEWAY";
+}
+button {
+	margin: 15px 0 0 0;
+	font-size: 20px;
+	background-color: #00A6B3;
+}
+button:hover {
+	cursor: pointer;
+	color: white;
 }
 
 .copyright {
